tenants/ecorp/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - ecorp.plaidcloud.io
    - app.ecorp.plaidcloud.io
    - superset.ecorp.plaidcloud.io
    secretName: ssl-cert
  rules:
  - host: ecorp.plaidcloud.io
    http:
      paths:
      - backend:
          serviceName: ecorp-wordpress
          servicePort: 80
        path: /
